fix alignment issues with navigation bar on the get a quote page, fix all the text turning into hyperlinks - this was all resolved by moving the elements floated right to before the logo

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ header {
 nav {
 	border: 2px solid green;
 	float: right;
+	clear: both;
 	margin: 0px 200px 0px 0px;
 }
 
